@@ -1,8 +1,11 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
 
-2012-05-xx; Version 1.0.1 - maintenance release
+2012-06-xx; Version 1.0.1 - maintenance release
 new:
+- new service interface "Epgsearch-enablesearchtimers-v1.0" to switch the search timers 
+  background update on/off. Updated the sample in source/vdr-epgsearchclient-0.0.2.tgz 
+  to use the new service.
 - new format specifier like %02i in the epgsearchcats.conf, thanks to Joe_D for providing
   a patch ('man 5 epgsearchcats.conf' for more information).
 - in the menu 'recordings done' you can now toggle the blue key to 'Orphaned' to show
